k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rafaelvzago/fortune-backend-rust:1.0
          resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          ports:
            - containerPort: 8080
