k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rafaelvzago/fortune-frontend:1.2
          resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          ports:
            - containerPort: 80
